# web3.0-test

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml  Encryption Debug.txt  Introductions.md  README.md  blog-post.md  caddyfile  common.mjs  index.html  init.mjs  main.css  main.css.mjs  main.mjs  make.bat  msg-rpc.js  peer.mjs  peersistence.mjs  push.mjs  rpc-client.mjs  sample-introductions.txt  service-worker.js  signaling-api.mjs  signaling-api.origin.mjs  signaling-protocol.md  ui.mjs
client/: Cargo.toml
client/js/: init.mjs  main.css.mjs  main.mjs  rpc-client.mjs
client/js/ui/: once-button.mjs  peer-item.css.mjs  spinner.css.mjs  spinner.mjs
client/src/: comms.rs  crypto.rs  lib.rs  peer.rs  peer_manager.rs  persist.rs  rand.rs  self_peer.rs  signaling.rs  signaling_v2.rs  web_push.rs
css/: main.css  spinner.css
idb/: index.mjs
js/: help.mjs  init.mjs  initialize.mjs  main.mjs  old-main.mjs  peer-connection.mjs  peer-item.mjs  peer-self.mjs  push-example.mjs  wasm-runtime.mjs  wrtc-example.mjs
js/ui/: peer-item.mjs
service-worker/: Cargo.toml
service-worker/js/: common.js  database.js  peer-meta.js  push.js  rpc-server.js  wasm-runtime.js
service-worker/src/: comms.rs  lib.rs  peer.rs  persist.rs  signaling-old.rs  signaling.rs
shared/: Cargo.toml
shared/src/: base.rs  crypto.rs  lib.rs  signaling.rs
sw/: base64.js  common.js  connection-port-handler.js  crypto-parameters.js  database.js  handle-message.js  push.js  rpc-definition.js  rpc-server.js  signaling-decoder.js  signaling-encoder.js  signaling-spec.md  sw-rpc-def.js  webpush.js
ui/: peer-item.mjs  spinner.css.mjs  spinner.mjs
wasm/debug/: client.js  client_bg.wasm  service-worker.js  service-worker_bg.wasm
web3/: Cargo.toml  signaling-spec.v2.md
web3/src/: crypto.rs  lib.rs  persist.rs  signaling.rs
