[package]
name = "client"
version = "0.1.0"
authors = ["Evan Brass <evan-brass@protonmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
shared = { path = "../shared" }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4.12"
js-sys = { version = "0.3" }
web-sys = { version = "0.3", features = ["SubtleCrypto", "CryptoKey"] }
postcard = { version = "0.5", features = ["use-std"] }
anyhow = "1.0"
yew = "0.17"
