[package]
name = "client"
version = "0.1.0"
authors = ["Evan Brass <evan-brass@protonmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.12"
serde = { version = "1.0", features = ["derive"] }
js-sys = { version = "0.3", features = [] }
web-sys = { version = "0.3.4", features = ["Window", "Storage", "Crypto"] }
wee_alloc = "0.4"
console_error_panic_hook = "0.1"
base64 = "0.12"
anyhow = "1.0"
p256 = { version = "0.4.1", features = ["ecdh", "ecdsa", "ecdsa-core"] }
rand = "0.7.3"
byteorder = "1.3.4"
flate2 = "1.0.16"
url = "2.1"
shared = { path = "../shared" }
bincode = "1.3"