[package]
name = "service-worker"
version = "0.1.0"
authors = ["Evan Brass <evan-brass@protonmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
shared = { path = "../shared" }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
base64 = "0.12"
libflate = "1.0"
byteorder = "1.3"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4.12"
js-sys = { version = "0.3" }
web-sys = { version = "0.3", features = ["SubtleCrypto", "CryptoKey"] }
postcard = { version = "0.5", features = ["use-std"] }
url = "2.1"
serde-big-array = "0.3"
anyhow = "1.0"
p256 = { version = "0.4.1", features = ["ecdh", "ecdsa", "ecdsa-core"] }
rand = "0.7.3"