[package]
name = "shared"
version = "0.1.0"
authors = ["Evan Brass <evan-brass@protonmail.com>"]
edition = "2018"

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = { version = "0.3.4", features = [] }
wee_alloc = "0.4"
console_error_panic_hook = "0.1"
anyhow = "1.0"